--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,10 +3,10 @@
   align-items: center;
   padding: 10px 50px;
   background-color: #f8f9fa;
-}
-
-.logo {
-  margin-right: 20px;
+  position: fixed;
+  top: 0;
+  left: 250px;
+  right: 0;
 }
 
 .home {
@@ -14,52 +14,16 @@
   cursor: pointer;
 }
 
-//menu list
-.menu {
-  display: flex;
-  gap: 20px;
-}
-
-.menu-item {
-  cursor: pointer;
-  padding: 10px;
-  border-radius: 5px;
-}
-
-.menu-item:hover {
-  background-color: #ddd;
-}
-
-.dropdown {
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-  padding: 5px;
-}
-
-.dropdown-item {
-  padding: 8px 12px;
-  cursor: pointer;
-}
-
-.dropdown-item:hover {
-  background-color: #eee;
-  border-radius: 10px;
-  color: black;
-}
-
 .menu-toggle {
   display: none;
 }
 
-.search {
+.btn-login {
   margin-left: auto;
-  margin-right: 30px;
 }
 
 /* Ẩn menu trên điện thoại, chỉ hiện "Trang chủ" và icon */
 @media (max-width: 768px) {
-  .menu,
-  .search,
   .btn-login {
     display: none;
   }
