--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -3,7 +3,7 @@
   font-size: 1.6rem;
   padding: 10px 20px;
   border-radius: 8px;
-  background-color: #007bff;
-  color: white;
+  background-color: var(--primary);
+  color: #ffffff;
   cursor: pointer;
 }
