--- a/src/pages/Login/LoginPage.module.scss
+++ b/src/pages/Login/LoginPage.module.scss
@@ -1,3 +1,11 @@
+
+.wrapper {
+  height: 100vh;
+  background: linear-gradient(135deg, #028aec, #764ba2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .container {
   margin: 100px auto;
   padding: 20px 10px;
@@ -7,6 +15,7 @@
   text-align: center;
   width: 500px;
   height: 300px;
+  background: white;
 }
 
 h2 {
@@ -46,7 +55,8 @@ h2 {
 }
 
 .login button {
-  width: 40%; /* Đặt chiều rộng là 50% */
+  width: 35%; /* Đặt chiều rộng là 50% */
+  font-size: 18px;
 }
 
 .signup {
