--- a/src/pages/Signup/SignUp.module.scss
+++ b/src/pages/Signup/SignUp.module.scss
@@ -4,6 +4,7 @@
   align-items: center;
   min-height: 100vh;
   background: linear-gradient(135deg, #028aec, #764ba2);
+
 }
 .homeLink {
   position: absolute;
@@ -30,6 +31,8 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   text-align: center;
   width: 550px;
+  border: 2px solid #0170cb; /* Thêm viền xanh dương */
+
 }
 h2 {
   margin: 0;
