--- a/src/pages/Login/LoginPage.module.scss
+++ b/src/pages/Login/LoginPage.module.scss
@@ -1,11 +1,17 @@
-@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css");
-
 .wrapper {
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   background: linear-gradient(135deg, #1e3c72, #ff6a00);
+
+  .home {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    cursor: pointer;
+    color: #ffffff;
+  }
 }
 
 .container {
