--- a/src/pages/Signup/SignUp.module.scss
+++ b/src/pages/Signup/SignUp.module.scss
@@ -4,7 +4,6 @@
   align-items: center;
   min-height: 100vh;
   background: linear-gradient(135deg, #028aec, #764ba2);
-
 }
 .homeLink {
   position: absolute;
@@ -32,7 +31,6 @@
   text-align: center;
   width: 550px;
   border: 2px solid #0170cb; /* Thêm viền xanh dương */
-
 }
 h2 {
   margin: 0;
@@ -72,6 +70,17 @@ h2 {
   }
 }
 
+.input-and-icon {
+  position: relative;
+}
+
+.icon-close {
+  position: absolute;
+  top: 50%;
+  color: red;
+  right: 10px;
+  transform: translateY(-50%);
+}
 .signupBtn {
   width: 50%;
   padding: 12px;
