thêm 1 số ux cho login

--- a/src/pages/Login/LoginPage.module.scss
+++ b/src/pages/Login/LoginPage.module.scss
@@ -59,6 +59,15 @@ h2 {
     font-size: 18px;
     color: #777;
   }
+
+  .icon-close {
+    position: absolute;
+    right: 15px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 18px;
+    color: red;
+  }
 }
 
 .login {
