--- a/src/components/Info/Info.module.scss
+++ b/src/components/Info/Info.module.scss
@@ -32,20 +32,33 @@ label {
   font-size: 14px;
 }
 
-.button {
+.button,
+.button-exit {
   width: 100%;
   padding: 10px;
-  background-color: #007bff;
-  color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
   transition: background 0.3s ease;
+  margin-bottom: 10px;
+  color: white;
 }
 
-.button:hover {
-  background-color: #0056b3;
+.button {
+  background-color: #007bff;
+
+  &:hover {
+    background-color: #0056b3;
+  }
+}
+
+.button-exit {
+  background-color: rgb(238, 19, 19);
+
+  &:hover {
+    background-color: rgb(218, 23, 23);
+  }
 }
 
 @media (max-width: 600px) {
