--- a/src/pages/Login/LoginPage.module.scss
+++ b/src/pages/Login/LoginPage.module.scss
@@ -1,5 +1,7 @@
 .wrapper {
   height: 100vh;
+  width: 100%;
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -9,7 +11,14 @@
     top: 20px;
     left: 20px;
     cursor: pointer;
+    font-size: 1.8rem;
     color: #ffffff;
+    font-weight: bold;
+
+    &:hover {
+      color: black;
+      transition: border-color 1s ease-in-out;
+    }
   }
 }
 
@@ -118,4 +127,17 @@ h2 {
   width: 200px; /* Điều chỉnh kích thước theo ý muốn */
   height: auto;
   margin-bottom: 15px;
+}
+
+@media (max-width: 600px) {
+  .container {
+    width: 100%;
+    height: 100vh;
+    border-radius: 0;
+    padding: 20px;
+  }
+
+  .logo {
+    width: 150px;
+  }
 }
