--- a/src/pages/Signup/SignUp.module.scss
+++ b/src/pages/Signup/SignUp.module.scss
@@ -25,7 +25,7 @@
 
 .signupBox {
   background: white;
-  padding: 5rem;
+  padding: 3rem 4rem;
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   text-align: center;
@@ -35,7 +35,7 @@
 
 h2 {
   margin: 0;
-  padding-bottom: 30px;
+  padding-bottom: 25px;
   border: 0;
   font-size: 140%;
   vertical-align: baseline;
@@ -43,7 +43,6 @@ h2 {
 
 .inputGroup {
   text-align: left;
-  margin-bottom: 1.5rem;
   position: relative;
   padding: 15px;
 
