--- a/src/components/History/History.module.scss
+++ b/src/components/History/History.module.scss
@@ -53,8 +53,6 @@
 }
 
 .no-history {
-  display: flex;
-  justify-content: center;
-  color: red;
-  font-style: italic;
+  font-size: 16px;
+  color: #999;
 }
