--- a/src/pages/Admin/AdminPage.module.scss
+++ b/src/pages/Admin/AdminPage.module.scss
@@ -3,10 +3,11 @@
 }
 
 .sidebar {
+  position: fixed; //!!!!!!!!!!!!!!!!!!!!!!
   width: 250px;
   background: rgb(44, 43, 43);
   padding: 20px;
-  height: 5000px;
+  height: 100vh;
   color: white;
 
   .logo {
@@ -81,6 +82,7 @@
   flex: 1;
   padding: 20px;
   background: #f5f7fa;
+  margin-left: 250px; //!!!!!!!!!!!!!!!!!!!!!!
 
   .title {
     font-size: 38px;
@@ -97,8 +99,8 @@
   .add-btn {
     display: flex;
     align-items: center;
-    gap: 8px; 
-    background: #28a745; 
+    gap: 8px;
+    background: #28a745;
     color: #fff;
     border: none;
     padding: 10px 16px;
@@ -109,7 +111,7 @@
     transition: background 0.3s ease, transform 0.1s ease;
 
     &:hover {
-      background: #218838; 
+      background: #218838;
       transform: scale(1.05);
     }
 
@@ -123,7 +125,7 @@
     }
 
     svg {
-      font-size: 14px; 
+      font-size: 14px;
     }
   }
 
