--- a/src/pages/Home/HomePage.module.scss
+++ b/src/pages/Home/HomePage.module.scss
@@ -44,6 +44,7 @@
   height: 400px; // hoặc bất kỳ chiều cao nào bạn muốn
   object-fit: cover;
   border-radius: 12px;
+  margin-bottom: 30px;
 }
 
 
