--- a/src/components/MakeQuestion/MakeQuestion.module.scss
+++ b/src/components/MakeQuestion/MakeQuestion.module.scss
@@ -42,6 +42,7 @@
 
 .question-group {
   padding: 5px;
+  margin-bottom: 5px;
 
   .question {
     width: 100%;
@@ -86,6 +87,7 @@
       border: 1.5px solid black;
       border-radius: 50%;
       position: relative;
+      cursor: pointer;
 
       .is-correct-in {
         position: absolute;
