--- a/src/components/ListQuestion/ListQuestion.module.scss
+++ b/src/components/ListQuestion/ListQuestion.module.scss
@@ -19,6 +19,7 @@
 .question-title {
   display: flex;
   align-items: center;
+  flex: 1;
   gap: 8px;
   cursor: pointer;
 
@@ -31,7 +32,6 @@
 }
 
 .icons {
-  margin-left: auto;
   .icon-edit,
   .icon-delete {
     margin-left: 20px;
@@ -78,4 +78,61 @@
   margin-left: auto;
   margin-right: auto;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+}
+
+.container-filter {
+  display: flex;
+  font-size: 1.6rem;
+  padding: 5px;
+  justify-content: center;
+  align-items: center;
+
+  margin-bottom: 5px;
+}
+
+.title-filter,
+.select-filter,
+.title-number-question,
+.number-question {
+  padding: 5px;
+  width: 200px;
+  height: 40px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+.title-filter,
+.title-number-question,
+.number-question {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.group-number-question {
+  display: flex;
+  flex: 1;
+  gap: 15px;
+  justify-content: center;
+
+  .number-question {
+    color: rgb(12, 225, 12);
+    font-weight: bold;
+  }
+}
+
+.group-filter {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  flex: 1;
+  justify-content: center;
+
+  .select-filter {
+    font-size: 1.6rem;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
 }
