--- a/src/components/ListExam/ListExam.module.scss
+++ b/src/components/ListExam/ListExam.module.scss
@@ -13,10 +13,7 @@
 
 .exam-container {
   display: grid;
-  grid-template-columns: repeat(
-    auto-fit,
-    minmax(200px, 1fr)
-  ); // Tự co giãn thành 1 hoặc 2 cột
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 15px;
   padding: 0;
 }
@@ -28,6 +25,9 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease-in-out;
   list-style: none;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 
   &:hover {
     transform: scale(1.02);
@@ -37,14 +37,29 @@
 .exam-title {
   font-size: 18px;
   font-weight: bold;
+  margin-bottom: 5px;
+
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* Giới hạn 2 dòng */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .exam-description {
   color: #666;
+  margin-bottom: 10px;
+
+  display: -webkit-box;
+  -webkit-line-clamp: 3; /* Giới hạn 3 dòng */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .exam-time {
   font-style: italic;
+  margin-bottom: auto; /* Đẩy các button xuống cuối */
 }
 
 .exam-actions {
