--- a/src/components/MakeQuestionPopup/MakeQuestionPopup.module.scss
+++ b/src/components/MakeQuestionPopup/MakeQuestionPopup.module.scss
@@ -146,6 +146,14 @@
 .special-keyboard {
   margin: 0;
   display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 6px;
+  margin: 5px;
+}
+
+.special-group {
+  display: flex;
   flex-wrap: wrap;
   gap: 6px;
 }
