--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -44,6 +44,22 @@ a[href] {
   opacity: 0.7; // Làm mờ nhẹ
 }
 
+.no-content {
+  padding: 20px;
+  margin-top: 30px;
+  text-align: center;
+  font-size: 18px;
+  font-style: italic;
+  color: #888;
+  background-color: #f8f9fa;
+  border: 1px dashed #ccc;
+  border-radius: 12px;
+  max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+}
+
 @media (max-width: 600px) {
   .icon-back {
     left: 5px;
