Add TeacherPage & UserPage

--- a/src/pages/Admin/AdminPage.module.scss
+++ b/src/pages/Admin/AdminPage.module.scss
@@ -3,7 +3,7 @@
 }
 
 .sidebar {
-  position: fixed; //!!!!!!!!!!!!!!!!!!!!!!
+  position: fixed; 
   width: 250px;
   background: rgb(44, 43, 43);
   padding: 20px;
@@ -218,4 +218,5 @@
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
     }
   }
+  
 }
