--- a/src/pages/Admin/AdminPage.module.scss
+++ b/src/pages/Admin/AdminPage.module.scss
@@ -220,3 +220,21 @@
   }
   
 }
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px; // Giảm margin-bottom từ 20px xuống 10px để nâng cao hơn
+}
+
+.logout {
+  font-size: 24px;
+  color: #555;
+  cursor: pointer;
+  transition: color 0.3s;
+  margin-top: -30px; 
+
+  &:hover {
+    color: #d33; 
+  }
+}
