--- a/src/components/ListQuestion/ListQuestion.module.scss
+++ b/src/components/ListQuestion/ListQuestion.module.scss
@@ -35,10 +35,13 @@
   .icon-edit,
   .icon-delete {
     margin-left: 20px;
-    padding: 3px;
-
+    padding: 5px;
     color: #555;
     cursor: pointer;
+
+    &:hover {
+      transform: scale(1.3);
+    }
   }
 
   .icon-edit {
